--- a/res/values/strings_activity_settings.xml
+++ b/res/values/strings_activity_settings.xml
@@ -5,6 +5,7 @@
     <!-- Strings related to Settings -->
     <string name="pref_normal_weight_display_name">"請輸入體重(一般人)"</string>
     <string name="pref_super_weight_display_name">"請輸入體重(運動員)"</string>
+    <string name="pref_notification_duration_display_name">"請輸入推播週期(秒)"</string>
     <string name="pref_title_notification_recommendations">"開啟推播功能"</string>
     <string name="pref_description_notification">"開啟推播功能定期通知飲水"</string>
 
