--- a/iDrink/src/main/res/layout/fragment_log.xml
+++ b/iDrink/src/main/res/layout/fragment_log.xml
@@ -1,4 +1,4 @@
-<uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout
+<uk.co.senab.actionbarpulltorefresh.extras.actionbarcompat.PullToRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ptr_layout"
@@ -18,4 +18,4 @@
         android:layout_alignParentTop="true" >
     </ListView>
 
-</uk.co.senab.actionbarpulltorefresh.library.PullToRefreshLayout>
+</uk.co.senab.actionbarpulltorefresh.extras.actionbarcompat.PullToRefreshLayout>
