--- a/iDrink/src/main/res/layout/fragment_main.xml
+++ b/iDrink/src/main/res/layout/fragment_main.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -45,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:text="每時需喝水：" />
 
-            <com.cengalabs.flatui.views.FlatSeekBar
+            <SeekBar
                 android:id="@+id/seekbar_current_cc_hourly"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -79,7 +80,7 @@
                 android:layout_toRightOf="@+id/textView3"
                 android:text="1000cc" />
 
-            <com.cengalabs.flatui.views.FlatSeekBar
+            <SeekBar
                 android:id="@+id/seekbar_current_cc_daily"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -88,10 +89,15 @@
 
         </RelativeLayout>
 
-        <com.cengalabs.flatui.views.FlatButton
+        <info.hoang8f.widget.FButton
             android:id="@+id/btn_list"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            fbutton:buttonColor="@color/color_concrete"
+            fbutton:shadowColor="@color/color_asbestos"
+            fbutton:shadowEnabled="true"
+            fbutton:shadowHeight="5dp"
+            fbutton:cornerRadius="5dp"
             android:text="Check" />
     </LinearLayout>
 
