--- a/iDrink/src/main/res/layout/item_log.xml
+++ b/iDrink/src/main/res/layout/item_log.xml
@@ -1,11 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:minHeight="80dp" >
 
-    <com.cengalabs.flatui.views.FlatSeekBar
+    <SeekBar
                 android:id="@+id/seekbar_current_cc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
