--- a/iDrink/src/main/res/layout/fragment_log.xml
+++ b/iDrink/src/main/res/layout/fragment_log.xml
@@ -1,20 +1,11 @@
-<android.support.v4.widget.SwipeRefreshLayout
+<ListView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ptr_layout"
+    android:id="@+id/list_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="lab.prada.android.app.idrink.LogActivity$PlaceholderFragment" >
-
-    <ListView
-        android:id="@+id/list_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" >
-    </ListView>
-</android.support.v4.widget.SwipeRefreshLayout>
+    tools:context="lab.prada.android.app.idrink.LogActivity$PlaceholderFragment" />
