--- a/iDrink/src/main/res/values/strings_activity_settings.xml
+++ b/iDrink/src/main/res/values/strings_activity_settings.xml
@@ -3,11 +3,12 @@
     <string name="title_activity_settings">Settings</string>
 
     <!-- Strings related to Settings -->
-    <string name="pref_normal_weight_display_name">"請輸入體重(一般人)"</string>
-    <string name="pref_super_weight_display_name">"請輸入體重(運動員)"</string>
+    <string name="pref_title_weight_display_name">"請輸入體重"</string>
     <string name="pref_notification_duration_display_name">"請輸入推播週期(秒)"</string>
     <string name="pref_title_notification_recommendations">"開啟推播功能"</string>
     <string name="pref_description_notification">"開啟推播功能定期通知飲水"</string>
+    <string name="pref_title_select_mode">"請選擇運動員模式"</string>
+    <string name="pref_description_select_mode">"開啟表示運動員模式"</string>
 
     <!-- Example settings for Data & Sync -->
     <string name="pref_header_data_sync">Data &amp; sync</string>
