--- a/iDrink/src/main/res/xml/pref_general.xml
+++ b/iDrink/src/main/res/xml/pref_general.xml
@@ -2,25 +2,23 @@
 
     <!-- NOTE: EditTextPreference accepts EditText attributes. -->
     <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
+    <SwitchPreference
+        android:defaultValue="true"
+        android:key="@string/key_mode"
+        android:summary="@string/pref_title_select_mode"
+        android:title="@string/pref_description_select_mode" />
+
     <EditTextPreference
         android:capitalize="words"
         android:defaultValue="70"
         android:inputType="number"
-        android:key="normal_weight"
+        android:key="@string/key_weight"
         android:selectAllOnFocus="true"
-        android:title="@string/pref_normal_weight_display_name" />
-
-    <EditTextPreference
-        android:capitalize="words"
-        android:defaultValue="75"
-        android:inputType="number"
-        android:key="super_weight"
-        android:selectAllOnFocus="true"
-        android:title="@string/pref_super_weight_display_name" />
+        android:title="@string/pref_title_weight_display_name" />
     
     <CheckBoxPreference
         android:defaultValue="true"
-        android:key="enable_notification"
+        android:key="@string/key_notification"
         android:summary="@string/pref_description_notification"
         android:title="@string/pref_title_notification_recommendations" />
 
@@ -28,7 +26,7 @@
         android:capitalize="words"
         android:defaultValue="3600"
         android:inputType="number"
-        android:key="super_duration"
+        android:key="@string/key_duration"
         android:selectAllOnFocus="true"
         android:title="@string/pref_notification_duration_display_name" />
 </PreferenceScreen>
