add debug feature. and update translation

--- a/iDrink/src/main/res/menu/main.xml
+++ b/iDrink/src/main/res/menu/main.xml
@@ -9,4 +9,9 @@
         android:title="@string/action_settings"
         app:showAsAction="always"/>
 
+    <item
+        android:id="@+id/action_debug"
+        android:orderInCategory="200"
+        android:title="@string/action_debug"
+        app:showAsAction="never"/>
 </menu>
